# aryabhata

./: .coverage  README.md  pyproject.toml
aryabhata/: __main__.py  main.py  sqrt.py
tests/: test_cli.py  test_sqrt_aryabhata.py
