[project]
name = "aryabhata"
version = "0.1.1"
description = ""
authors = [
    {name = "DJ Stomp",email = "85457381+DJStompZone@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pytest (>=9.0.0,<10.0.0)",
    "coverage (>=7.11.2,<8.0.0)"
]

[tool.poetry]
packages = [{include = "aryabhata"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
